# SmartLocker

./: .gitignore  .travis.yml  Dockerfile  Dockerfile.CN  Makefile  README.md  config.yaml  docker-startup.sh  go.mod  go.sum  readme.md
.github/workflows/: dockerimage.yml
backend/: .gitignore  Dockerfile  Dockerfile.CN  Makefile  README.md  api.xlsx  config.yaml  config_mysql.yaml  config_sqlite.yaml  docker-startup.sh  go.mod  go.sum  readme.md
backend/cmd/seed/: seed.go
backend/cmd/server/: server.go
backend/cmd/server/router/: api.go  v1.go
backend/cmd/server/router/cabinet/v1/: cabinet.go
backend/cmd/server/router/http/v1/: article.go  face.go  user.go  wrapper.go
backend/cmd/server/router/http/v1/middleware/: jwt.go
backend/cmd/server/router/v1/: cabinet.go  user.go  wrapper.go
backend/cmd/server/router/v1/middleware/: jwt.go
backend/config/: config.go  scheme.go
backend/e/: code.go  msg.go
backend/logger/: logger.go
backend/model/: cabinet.go  db.go  locker.go  user.go
backend/service/article/: article.go
backend/service/auth/: auth.go
backend/service/cabinet/: cabinet.go
backend/service/cache/: cabinet.go  node.go  redis.go  task.go  user.go
backend/service/face/: face.go  lib.h  libFaceRecognizer.def  make.bat
backend/service/node/: client.go
backend/service/task/: backend.go  client.go
backend/service/user/: user.go
backend/util/: hash.go  img.go
cmd/seed/: seed.go
cmd/server/: server.go
cmd/server/router/: v1.go
database/: cabinet.go  db.go  locker.go  users.go
e/: code.go  msg.go
face/: README.md  ci_dependencies.sh  dependencies.sh
face/FaceRecognizer/: .gitignore  CMakeLists.txt  header.h  lib.cpp  lib.h  lib_internal.h  main.cpp  read.cpp  read.h
face/FaceRecognizer/seeta/: FaceEngine.h  Struct_cv.h  seeta.cpp  seeta.h
face/RaspberryAgent/: .gitignore  CMakeLists.txt  CMakeSettings.json  config.cpp  config.h  config.json  connect.cpp  connect.h  header.h  http.cpp  http.h  main.cpp
face/RaspberryAgent/libface/: .gitignore  CMakeLists.txt  UltraFace.cpp  UltraFace.h  face.cpp  face.h  main.cpp
face/RaspberryAgent/libface/include/: face.h
frontend/: login.html  main.html  register.html  sign_up.html  test.html
frontend/jquery-mobile/: jquery.mobile.structure-1.3.0.min.css
frontend/js/: ip.js
model/: cabinet.go  db.go  locker.go
service/article/: article.go
service/cabinet/: cabinet.go
service/user/: user.go
